[package]
name = "solana-build-alpenglow-vote"
description = "Build alpenglow-vote"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[build-dependencies]

[lib]
crate-type = ["lib"]
name = "build_alpenglow_vote"

[dev-dependencies]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true
