[package]
name = "solana-slice-root"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/solana-votor-messages"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-hash = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
